# cli_template

./: CMakeLists.txt  LICENSE.md  README.md  manifest.kmf
_external_shared/KalaHeaders/: math_utils.hpp
include/: command.hpp  core.hpp
release/: README.md
src/: command.cpp  core.cpp  main.cpp
